--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -30,7 +33,7 @@ nav a {
 
 #items {
   /* background: #678047; */
-  height: 100vh;
+  height: 90vh;
 }
 
 #items h1 {
@@ -69,4 +72,36 @@ p {
   object-position: center;
   /* background-image: linear-gradient(#c06511, #281094); */
   border-radius: 15px;
+}
+
+#contact {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#contact a {
+  padding: 0.4rem 0.74rem;
+  background-color: limegreen;
+  border-radius: 10px;
+  color: aliceblue;
+  margin-top: 0.5rem;
+}
+
+#contact h1,
+h2 {
+  padding: 1rem 0 0;
+}
+.image-part {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.image-part img {
+  width: 30%;
+  height: 80%;
+  object-position: center;
+  object-fit: cover;
 }
